Justerat och testat swagger för redflags